# omega-cli

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml  release.yml
omega_cli/: __init__.py  config.py  main.py  reporter.py
omega_cli.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
omega_cli/agents/: __init__.py  base_agent.py  executor.py  manager.py  memory.py  planner.py  router.py
omega_cli/agents/specialists/: __init__.py  ai_security_agent.py  cloud_agent.py  crypto_agent.py  exploit_agent.py  forensics_agent.py  hexstrike_agent.py  password_agent.py  post_agent.py  privacy_agent.py  recon_agent.py  report_agent.py  reverse_agent.py  social_agent.py  vuln_agent.py  web_agent.py  wifi_agent.py
omega_cli/modules/: __init__.py  ai_analyst.py  aiassist.py  aisummary.py  archive.py  asnrecon.py  attackmap.py  autocorr.py  breachcheck.py  briefing.py  buckets.py  c2.py  certhunt.py  cloudrecon.py  compare.py  corscheck.py  creds.py  crtsh.py  crypto.py  cryptoosint.py  cvssrank.py  dashboard.py  deception.py  dns_lookup.py  dnsbrute.py  dorks.py  dossier.py  email_osint.py  exfil.py  finance.py  headers.py  hexstrike.py  identity.py  intel.py  ipdossier.py  ipinfo.py  leaked.py  mailsec.py  mobile.py  network.py  (+32 more)
