[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "omega-cli"
version = "1.7.0"
description = "OSINT and passive recon toolkit"
requires-python = ">=3.9"
dependencies = [
    "click>=8.0",
    "rich>=13.0",
    "python-whois>=0.9",
    "dnspython>=2.4",
    "requests>=2.31",
    "ipwhois>=1.3",
    "shodan>=1.31",
    "httpx>=0.27",
    "beautifulsoup4>=4.12",
    "lxml>=5.0",
    "aiohttp>=3.9",
    "jinja2>=3.1",
    "prompt-toolkit>=3.0",
    "schedule>=1.2",
    "openai>=1.0",
]

[project.scripts]
omega = "omega_cli.main:cli"

[tool.setuptools.packages.find]
where = ["."]
include = ["omega_cli*"]
